# llmt

./: .gitignore  CMakeLists.txt  LICENSING.md  README.md  TODO.md
bench/: CMakeLists.txt  bandwidth_bench.cu  matmul_bench.cu  timing.h
bench/results/: bandwidth_a4000.json  bandwidth_a4500.json  bandwidth_rtx4000ada.json
docs/: DESIGN.md  TODO.md  dev.md  golden.md  hardware.md  knowledge.md
include/llmt/: llmt.h
include/llmt/core/: arena.h  defs.h  device.h  dtype.h  error.h  precision.h  rng.h  run_ctx.h  shape.h  tensor.h
include/llmt/kernels/: algo_cache.h  attention.h  cross_entropy.h  embedding.h  fill.h  gelu.h  mask.h  matmul.h  permute.h  residual.h  rmsnorm.h  rope.h  softmax.h
include/llmt/layers/: linear.h  mlp.h
include/llmt/model/: init.h  param_store.h
scripts/: ci.sh  remote.sh  setup_pod.sh
src/core/: arena.cu  device.cu  rng.cu  version.cpp
src/kernels/: attention.cpp  cross_entropy.cu  embedding.cu  fill.cu  gelu.cu  matmul.cpp  permute.cu  residual.cu  rmsnorm.cu  rope.cu  softmax.cu  warp.cuh
src/layers/: linear.cpp  mlp.cpp
src/model/: init.cpp  param_store.cpp
tests/: CMakeLists.txt  test_main.cpp
tests/golden/attention/: manifest.json
tests/golden/cross_entropy/: manifest.json
tests/golden/embedding/: manifest.json
tests/golden/gelu/: manifest.json
tests/golden/linear/: manifest.json
tests/golden/matmul/: manifest.json
tests/golden/matmul_rank3/: manifest.json
tests/golden/mlp/: manifest.json
tests/golden/permute/: manifest.json
tests/golden/residual/: manifest.json
tests/golden/rmsnorm/: manifest.json
tests/golden/rope/: manifest.json
tests/golden/scale2x/: manifest.json
tests/golden/softmax/: manifest.json
tests/support/: check.h  determinism.h  finite_diff.h  golden_io.cpp  golden_io.h  transfer.h
tests/unit/: test_attention.cu  test_core_gpu.cu  test_core_host.cpp  test_cross_entropy.cu  test_embedding.cu  test_golden_gpu.cu  test_golden_host.cpp  test_gpu_smoke.cu  test_kernels_fwd.cu  test_linear.cu  test_matmul.cu  test_mlp.cu  test_param_store.cu  test_smoke.cpp
tools/: gen_golden.py  requirements.txt
